--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/js-cookie": "^2.2.7",
     "axios": "^0.21.1",
+    "date-fns": "^2.22.1",
     "js-cookie": "^2.2.1",
     "next": "11.0.1",
     "rc-slider": "^9.7.2",
