--- a/package.json
+++ b/package.json
@@ -13,14 +13,19 @@
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "js-cookie": "^2.2.1",
+    "lodash": "^4.17.21",
     "next": "11.0.1",
     "rc-slider": "^9.7.2",
     "react": "17.0.2",
+    "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.3.4",
     "react-loading": "^2.0.3",
-    "sass": "^1.35.2"
+    "sass": "^1.35.2",
+    "use-state-with-callback": "^2.0.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.171",
     "@types/react": "17.0.14",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
