--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/js-cookie": "^2.2.7",
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
+    "filesize": "^7.0.0",
     "js-cookie": "^2.2.1",
     "lodash": "^4.17.21",
     "next": "11.0.1",
