--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "date-fns": "^2.22.1",
     "filesize": "^7.0.0",
+    "framer-motion": "^4.1.17",
     "lodash": "^4.17.21",
     "next": "11.0.1",
     "nookies": "^2.5.2",
