--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.3.4",
+    "react-google-charts": "^3.0.15",
     "react-loading": "^2.0.3",
     "sass": "^1.35.2"
   },
