--- a/package.json
+++ b/package.json
@@ -24,12 +24,15 @@
     "react-dropzone": "^11.3.4",
     "react-google-charts": "^3.0.15",
     "react-loading": "^2.0.3",
+    "react-lottie": "^1.2.3",
     "sass": "^1.35.2"
   },
   "devDependencies": {
     "@types/cookie": "^0.4.1",
     "@types/lodash": "^4.14.171",
     "@types/react": "17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-lottie": "^1.2.6",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.5"
